# statistic-rust

week-2/: Cargo.toml
week-2/data/: arbuthnot.csv
week-2/src/: main.rs
