[package]
name = "week-2"
version = "0.1.0"
authors = ["alexandru.crihan <alexandru.crihan@esolutions,ro>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
plotters = "^0.2.12"

